fixed blogs not showing on homepage

--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -5,11 +5,6 @@
   touch-action: manipulation;
 }
 
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
 html {
   font-family: sans-serif;
   line-height: 1.15;
